Fixed overflow in display

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     background-color: gray;
     border-radius: 20px;
     border: 5px solid black;
+    width: 500px;
 
     display: flex;
     flex-direction: column;
@@ -30,6 +31,7 @@ body{
     padding: 20px;
     border-radius: 20px;
     border: 5px solid black;
+    overflow: hidden;
     
     display: flex;
     justify-content: end;
